--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -9,8 +9,51 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
-    <!-- javascript -->
+    <section class="section">
+      <div class="section-center">
+        <article class="gift-img">
+          <img src="./gift.jpeg" alt="iPhone" />
+        </article>
+        <article class="gift-info">
+          <h3>old iPhone giveaway</h3>
+          <h4 class="giveaway">
+            giveaway ends on Sunday, 24 April 2020, 8:00am
+          </h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis
+            molestias consectetur pariatur accusamus provident quis harum illum
+            odio modi corrupti, possimus impedit quaerat quisquam tempora hic
+            corporis maxime ducimus voluptatem.
+          </p>
+          <div class="deadline">
+            <div class="deadline-format">
+              <div>
+                <h4 class="days"></h4>
+                <span>days</span>
+              </div>
+            </div>
+            <div class="deadline-format">
+              <div>
+                <h4 class="hours"></h4>
+                <span>hours</span>
+              </div>
+            </div>
+            <div class="deadline-format">
+              <div>
+                <h4 class="min"></h4>
+                <span>min</span>
+              </div>
+            </div>
+            <div class="deadline-format">
+              <div>
+                <h4 class="sec"></h4>
+                <span>secs</span>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
