Complete 15 project - Slider

--- a/15-slider/setup/index.html
+++ b/15-slider/setup/index.html
@@ -10,7 +10,29 @@
   </head>
   <body>
     <h1>slider project</h1>
-
+    <div class="slider-container">
+      <div class="slide">
+        <img src="./img-1.jpeg" alt="" class="slide-img" />
+        <h1>1</h1>
+      </div>
+      <div class="slide">
+        <h1>2</h1>
+      </div>
+      <div class="slide">
+        <h1>3</h1>
+      </div>
+      <div class="slide">
+        <div>
+          <img src="./person-1.jpeg" alt="person-img" class="slide-img" />
+          <h4>susan doe</h4>
+          <h1>4</h1>
+        </div>
+      </div>
+    </div>
+    <div class="btn-container">
+      <button class="prevBtn">prev</button>
+      <button class="nextBtn">next</button>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
